--- a/style.css
+++ b/style.css
@@ -1,19 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@700&family=Overpass:wght@100;200&display=swap');
 
 :root{
+  --white:#fff;
   --black:#192a56;
+  --gray: #444;
   --orange:#F95F1D;
   --yellow:#ffa801;
 }
 
 *{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Overpass', sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
   text-decoration: none;
   outline: none; border:none;
-  /* text-transform: capitalize; */
   transition: .2s linear;
+}
+
+h1{
+  color:var(--white);
+  font-size: 5.5rem;
+  text-transform: uppercase;
+  font-family: Chivo;
+}
+
+h2{
+  color:var(--white);
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  font-family: Chivo;
+}
+
+h3{
+  font-size: 2.5rem;
+  color:var(--black);
+  padding:1rem 0;
+}
+
+h4{
+  font-size: 2.5rem;
+  color:var(--white);
+  padding:1rem 0;
+}
+
+p, ul{
+  font-size: 1.6rem;
+  color:var(--gray);
+  padding-bottom:1rem;
+  list-style: none;
+}
+
+ul{
+  font-size: 1.8rem;
 }
 
 html{
@@ -41,7 +80,7 @@ section{
 
 .btn:hover{
   background:var(--yellow);
-  color:#fff;
+  color:var(--white);
 }
 
 .heading{
@@ -62,14 +101,8 @@ header{
   justify-content: space-between;
   padding:0.5rem 7%;
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-  background:#fff;
+  background:var(--white);
   z-index: 1000;
-}
-
-header .logo{
-  font-size: 2.5rem;
-  color:#666;
-  font-weight: bolder;
 }
 
 header .navbar a{
@@ -99,7 +132,6 @@ header .navbar a:hover{
 }
 
 .home .image{
-  padding-top: 4rem;
   flex:1 1 40rem;
 }
 
@@ -108,30 +140,32 @@ header .navbar a:hover{
   flex:1 1 40rem;
 }
 
-.home .content h3{
-  color:#fff;
-  font-size: 5.5rem;
-  text-transform: uppercase;
+.home .content p{
+  color:var(--white);
+  font-size: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.home .content p{
-  color:#fff;
-  font-size: 1.7rem;
+.home .content b{
+  text-transform: uppercase;
+  font-weight: bold;
 }
+
 
 .home .image img{
   width:100%;
 }
 
 .home .content .btn{
-  color:#444;
-  background:#fff;
+  color:var(--gray);
+  background:var(--white);
 }
 
 .home .content .btn:hover{
-  color:#fff;
+  color:var(--white);
   background:none;
-  border-color: #fff;
+  border-color: var(--white);
 }
 
 .feature .box-container{
@@ -149,24 +183,12 @@ header .navbar a:hover{
   flex:1 1 30rem;
 }
 
-.feature .box-container .box h3{
-  font-size: 2.5rem;
-  color:var(--black);
-  padding:1rem 0;
-}
-
-.feature .box-container .box p{
-  font-size: 1.3rem;
-  color:#666;
-  padding-bottom:1rem;
-}
-
 .service{
   background:var(--black);
 }
 
 .service .heading{
-  color:#fff;
+  color:var(--white);
 }
 
 .service .box-container{
@@ -180,24 +202,24 @@ header .navbar a:hover{
   padding:4rem;
   margin:1rem;
   flex:1 1 30rem;
-  border:.1rem solid #fff3;
+  border:.1rem solid var(--gray);
   text-align: center;
 }
 
 .service .box-container .box h3{
   font-size: 2.5rem;
-  color:#fff;
+  color:var(--white);
   padding:1rem 0;
 }
 
 .service .box-container .box p{
-  font-size: 1.5rem;
-  color:#fff;
+  font-size: 1.6rem;
+  color:var(--white);
   padding-bottom:1rem;
 }
 
 .service .box-container .box:hover{
-  background:#fff;
+  background:var(--white);
 }
 
 .service .box-container .box:hover h3{
@@ -205,7 +227,7 @@ header .navbar a:hover{
 }
 
 .service .box-container .box:hover p{
-  color:#666;
+  color:var(--gray);
 }
 
 .project .box-container{
@@ -246,7 +268,7 @@ header .navbar a:hover{
   top:0; left:0;
   height: 100%;
   width:100%;
-  background:#fff;
+  background:var(--white);
   transition: .3s ease-out;
   clip-path: circle(30% at 95% 0);
 }
@@ -270,13 +292,7 @@ header .navbar a:hover{
   top:50%;
 }
 
-.project .box-container .box .info h3{
-  color:var(--black);
-  font-size: 2.5rem;
-}
-
 .project .box-container .box .info p{
-  color:#666;
   font-size: 2rem;
 }
 
@@ -285,7 +301,7 @@ header .navbar a:hover{
 }
 
 .team .heading{
-  color:#000;
+  color:var(--black);
 }
 
 .team .box-container{
@@ -297,7 +313,7 @@ header .navbar a:hover{
 
 .team .box-container .box{
   width:27rem;
-  background:#fff;
+  background:var(--white);
   position: relative;
   margin:1rem;
   text-align: center;
@@ -312,20 +328,13 @@ header .navbar a:hover{
   object-fit: cover;
 }
 
-.team .box-container .box h3{
-  font-size: 2.5rem;
-  color:var(--black);
-}
-
 .team .box-container .box span{
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color:var(--orange);
 }
 
 .team .box-container .box p{
   padding:1rem 2.5rem;
-  font-size: 1.3rem;
-  color:#666;
 }
 
 .team .box-container .box .share{
@@ -341,12 +350,12 @@ header .navbar a:hover{
   height: 4.5rem;
   width: 4.5rem;
   line-height: 4.5rem;
-  color:#fff;
+  color:var(--white);
   font-size: 1.7rem;
 }
 
 .team .box-container .box .share a:hover{
-  background:#fff;
+  background:var(--white);
   color:var(--black);
 }
 
@@ -355,7 +364,7 @@ header .navbar a:hover{
 }
 
 .price .heading{
-  color:#fff;
+  color:var(--white);
 }
 
 .price .box-container{
@@ -375,7 +384,7 @@ header .navbar a:hover{
 
 .price .box-container .box h3{
   font-size: 3rem;
-  color:#fff;
+  color:var(--white);
   padding: 1rem 0;
 }
 
@@ -391,7 +400,7 @@ header .navbar a:hover{
 }
 
 .price .box-container .box p{
-  color:#eee;
+  color:var(--white);
   font-size: 1.8rem;
   padding:1rem 0;
 }
@@ -422,7 +431,7 @@ header .navbar a:hover{
   margin:1.5rem 0;
   padding:.7rem 1rem;
   font-size: 1.7rem;
-  color:#666;
+  color:var(--gray);
   border:.1rem solid rgba(0,0,0,.2);
   text-transform: none;
 }
@@ -433,10 +442,10 @@ header .navbar a:hover{
 }
 
 .contact .row form .inputBox label{
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   position: absolute;
   top:2.5rem; left:1rem;
-  color:#444;
+  color:var(--gray);
 }
 
 .contact .row form .inputBox input:focus ~ label,
@@ -461,22 +470,16 @@ header .navbar a:hover{
   flex:1 1 25rem;
 }
 
-.footer .box-container .box h3{
-  font-size: 2.5rem;
-  color:#fff;
-  padding:1rem 0;
-}
-
 .footer .box-container .box p{
-  font-size: 1.5rem;
-  color:#fff;
+  font-size: 1.6rem;
+  color:var(--white);
   padding:.5rem 0;
 }
 
 .footer .box-container .box a{
   display: block;
-  font-size: 1.5rem;
-  color:#fff;
+  font-size: 1.6rem;
+  color:var(--white);
   padding:.5rem 0;
 }
 
@@ -485,9 +488,7 @@ header .navbar a:hover{
 }
 
 .footer .credit{
-  font-size: 2rem;
-  background:#fff;
-  color:#444;
+  background:var(--white);
   text-align: center;
   padding:2.5rem 1rem;
   letter-spacing: .1rem;
@@ -501,18 +502,6 @@ header .navbar a:hover{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-/* media queries  */
 
 @media (max-width:1200px){
 
@@ -542,7 +531,7 @@ header .navbar a:hover{
     position: absolute;
     top:100%; left: 0;
     width:100%;
-    background:#eee;
+    background:var(--white);
     height:calc(100vh - 100%);
     border-top: .1rem solid rgba(0,0,0,.2);
     display: none;
@@ -556,11 +545,11 @@ header .navbar a:hover{
     margin:1rem;
     display: block;
     padding:1.3rem 0;
-    background:#fff;
+    background:var(--white);
     text-align: center;
-    border:.1rem solid #444;
+    border:.1rem solid var(--gray);
     animation: nav-links .5s linear backwards;
-    animation-delay: calc(.2s * var(--i));
+    animation-delay: calc(.1s * var(--i));
   }
 
   @keyframes nav-links{
@@ -576,10 +565,7 @@ header .navbar a:hover{
 
   .home .content{
     text-align: center;
-  }
-
-  .home .content h3{
-    font-size: 4rem;
+    padding-top: 5rem
   }
 
 }
